Wed Apr 16 11:52:22 2003  David Helder  <dhelder@umich.edu>

	* src/{inetaddr,mcast,udp, gnet-private, gnet}.c: Use HAVE_IPV6
	* examples/inetaddr_test.c: "
	* configure.ac (HAVE_IPV6): Added check for.

Tue Apr 15 13:37:38 2003  David Helder  <dhelder@umich.edu>

	* src/gnet-private.h: define sockaddr_storage if not defined.
	* configure.ac: Check for sockaddr_storage

Tue Apr 15 11:07:52 2003  David Helder  <dhelder@umich.edu>

	* src/gnet.c (ipv6_detect_envvar): s/index/strchr/

Sun Apr 13 17:50:23 2003  David Helder  <dhelder@umich.edu>

	* doc/Makefile.am (maintainer-clean-local): Fix clean rule.

Sun Apr 13 14:09:14 2003  David Helder  <dhelder@umich.edu>

	* doc/gnet-docs.sgml: Update version.

Sat Apr 12 15:24:21 2003  David Helder  <dhelder@umich.edu>

	* *: Various 2.0 renames.
	* tests/client_server_test.pl (test): Add a pause - too
	   fast for BSD.

Wed Mar 19 09:46:12 2003  David Helder  <dhelder@umich.edu>

	* gnet.m4/gnet-1.3.m4: Rename -> gnet-1.3.m4

	* configure.ac: Use AC_CANONICAL_SYSTEM instead of BUILD
	   (BSD fix).

Wed Mar  5 18:58:44 2003  David Helder  <dhelder@umich.edu>
	
	* BUGS,README: Updates

Wed Mar  5 18:47:04 2003  David Helder  <dhelder@umich.edu>

	* gnet.spec.in: Fixes from Jeff Boonggren (closes #107499)

Tue Feb 25 15:19:17 2003  David Helder  <dhelder@umich.edu>

	* src/makefile.mingw: Commited Martyn Russell's patch to use
	   pkg-config.
	
	* src/conn.c (async_cb): Guard conn->func's with
	g_return_val_if_fail().

	* src/conn.c (gnet_conn_new_socket): Don't watch error.

Fri Feb 21 17:52:18 2003  David Helder  <dhelder@umich.edu>

	* *: Release 1.3.2
	
	* src/gnet-private.h: Add macros for setting ss_len based on
	    ss_family.  On linux this is a no-op.
	* src/inetaddr.c (gnet_inetaddr_list_interfaces: GNET_INETADDR_SET_SS_LEN
	* src/inetaddr.c (gnet_inetaddr_set_bytes): 
	* src/inetaddr.c (gnet_inetaddr_new_nonblock): 
	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): 
	* src/inetaddr.c (gnet_gethostbyname): 